# django-pg-app

./: .gitignore  README.md  pyproject.toml
pg_app/: manage.py
pg_app/database_app/: admin.py  models.py  serializers.py  urls.py  views.py
pg_app/database_app/management/commands/: load_properties.py
pg_app/database_app/migrations/: 0001_initial.py  0002_alter_property_list_associated_properties.py  0003_alter_property_list_associated_properties.py  0004_remove_property_list_associated_properties.py
pg_app/pg_app/: asgi.py  settings.py  urls.py  wsgi.py
react-frontend/: package-lock.json  package.json
