[tool.poetry]
name = "database_django"
version = "0.1.0"
description = "dependencies for this lil app I'm making idk"
authors = ["Kyle Reaves <89040357+KyleReaves@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9.10"
django-cors-headers = "^3.10.0"
djangorestframework = "^3.12.4"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
